--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <html>
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta http-equiv="refresh" content="1800" >
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,5 +15,22 @@
           <h1><img src="images/logo.jpg" width="50" height="70" class="img-circle">Shubham App Sync Project</h1>
         </button>
       </footer>
+
+    <p></p>
+    <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://shubhamyeole.com/" style=""></iframe>
+
+    <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://shubham-great-livings.herokuapp.com" style=""></iframe>
+
+    <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://resumeselector.herokuapp.com" style=""></iframe>
+
+    <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://mediabuzznet.herokuapp.com" style=""></iframe>
+
+    <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://java-nodejs-blog.herokuapp.com" style=""></iframe>
+
+    <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://shubhamtwilio.herokuapp.com" style=""></iframe>
+
+    <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://shubhammovieflix.herokuapp.com" style=""></iframe>
+
+    <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://visitorsgooglemap.herokuapp.com" style=""></iframe>
     </body>
 </html>
