--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,21 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
       <link rel="stylesheet" href="css/style.css">
       <title>Shubham Sync App Project</title>
+      <link rel="icon" href="/images/logo.jpg">
    </head>
    
-   <body class="container-fluid">
+   <body class="container-fluid headerBlock">
       <footer class="container-fluid text-center">
-        <button type="button" class="btn btn-info">
-          <h1><img src="images/logo.jpg" width="50" height="70" class="img-circle">Shubham App Sync Project</h1>
+        <button type="button" class="btn btn-info" style="width: 100%">
+          <div class="pull-left"><img src="images/logo.jpg" width="60" height="70" class="img-circle"></div>
+          <div class="pull-right"><p>Shubham App Sync Project</p></div>
         </button>
       </footer>
-
+<div class="container webPageBlocks">
     <p>Portfolio</p>
     <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://shubhamyeole.com/" style=""></iframe>
 
@@ -39,5 +43,6 @@
 
     <p>Visitor Google Map</p>
     <iframe scrolling="auto" class="aboutMeIframe" frameborder="0" allowtransparency="true" src="http://visitorsgooglemap.herokuapp.com" style=""></iframe>
+</div>
     </body>
 </html>
